--- a/WebApplication1/Views/Login/Authentication.cshtml
+++ b/WebApplication1/Views/Login/Authentication.cshtml
@@ -24,8 +24,8 @@
                         <div class="login-space">
                             <div class="login">
                                 <div class="group">
-                                    <label for="user" class="label">Username</label>
-                                    <input id="user" type="text" class="input" placeholder="Enter your username">
+                                    <label for="pass" class="label">Email Address</label>
+                                    <input id="pass" type="text" class="input" placeholder="Enter your email address">
                                 </div>
                                 <div class="group">
                                     <label for="pass" class="label">Password</label>
