--- a/WebApplication1/Views/Home/About.cshtml
+++ b/WebApplication1/Views/Home/About.cshtml
@@ -7,13 +7,14 @@
 <main id="main">
 
     <!-- ======= Breadcrumbs ======= -->
+    
     <section id="breadcrumbs" class="breadcrumbs">
         <div class="container">
 
             <div class="d-flex justify-content-between align-items-center">
                 <h2>About</h2>
                 <ol>
-                    <li><a href="index.html">Home</a></li>
+                    <li><a href="@Url.Action("Index", "Home")">Home</a></li>
                     <li>About</li>
                 </ol>
             </div>
