--- a/WebApplication1/Views/Home/Blog.cshtml
+++ b/WebApplication1/Views/Home/Blog.cshtml
@@ -13,7 +13,7 @@
             <div class="d-flex justify-content-between align-items-center">
                 <h2>Blog</h2>
                 <ol>
-                    <li><a href="index.html">Home</a></li>
+                    <li><a href="@Url.Action("Index", "Home")">Home</a></li>
                     <li>Blog</li>
                 </ol>
             </div>
@@ -31,7 +31,7 @@
                     <article class="entry">
 
                         <div class="entry-img">
-                            <img src="~/assets/img/blog/blog-1.jpg" alt="" class="img-fluid">
+                            <img src="assets/img/blog/blog-1.jpg" alt="" class="img-fluid">
                         </div>
 
                         <h2 class="entry-title">
@@ -52,7 +52,8 @@
                                 Et eveniet enim. Qui velit est ea dolorem doloremque deleniti aperiam unde soluta. Est cum et quod quos aut ut et sit sunt. Voluptate porro consequatur assumenda perferendis dolore.
                             </p>
                             <div class="read-more">
-                                <a href="blog-single.html">Read More</a>
+                                <a href="@Url.Action("Blog_Single", "Home")">Read More</a>
+
                             </div>
                         </div>
 
@@ -61,7 +62,7 @@
                     <article class="entry">
 
                         <div class="entry-img">
-                            <img src="~/assets/img/blog/blog-2.jpg" alt="" class="img-fluid">
+                            <img src="assets/img/blog/blog-2.jpg" alt="" class="img-fluid">
                         </div>
 
                         <h2 class="entry-title">
@@ -82,7 +83,7 @@
                                 Ad impedit qui officiis est in non aliquid veniam laborum. Id ipsum qui aut. Sit aliquam et quia molestias laboriosam. Tempora nam odit omnis eum corrupti qui aliquid excepturi molestiae. Facilis et sint quos sed voluptas. Maxime sed tempore enim omnis non alias odio quos distinctio.
                             </p>
                             <div class="read-more">
-                                <a href="blog-single.html">Read More</a>
+                                <a href="@Url.Action("Blog_Single", "Home")">Read More</a>
                             </div>
                         </div>
 
@@ -91,7 +92,7 @@
                     <article class="entry">
 
                         <div class="entry-img">
-                            <img src="~/assets/img/blog/blog-3.jpg" alt="" class="img-fluid">
+                            <img src="assets/img/blog/blog-3.jpg" alt="" class="img-fluid">
                         </div>
 
                         <h2 class="entry-title">
@@ -112,7 +113,7 @@
                                 Doloremque est saepe laborum aut. Ipsa cupiditate ex harum at recusandae nesciunt. Ut dolores velit.
                             </p>
                             <div class="read-more">
-                                <a href="blog-single.html">Read More</a>
+                                <a href="@Url.Action("Blog_Single", "Home")">Read More</a>
                             </div>
                         </div>
 
@@ -121,7 +122,7 @@
                     <article class="entry">
 
                         <div class="entry-img">
-                            <img src="~/assets/img/blog/blog-4.jpg" alt="" class="img-fluid">
+                            <img src="assets/img/blog/blog-4.jpg" alt="" class="img-fluid">
                         </div>
 
                         <h2 class="entry-title">
@@ -142,7 +143,7 @@
                                 Quia sed sunt. Ea asperiores expedita et et delectus voluptates rerum. Id saepe ut itaque quod qui voluptas nobis porro rerum. Quam quia nesciunt qui aut est non omnis. Inventore occaecati et quaerat magni itaque nam voluptas. Voluptatem ducimus sint id earum ut nesciunt sed corrupti nemo.
                             </p>
                             <div class="read-more">
-                                <a href="blog-single.html">Read More</a>
+                                <a href="@Url.Action("Blog_Single", "Home")">Read More</a>
                             </div>
                         </div>
 
@@ -185,31 +186,31 @@
                         <h3 class="sidebar-title">Recent Posts</h3>
                         <div class="sidebar-item recent-posts">
                             <div class="post-item clearfix">
-                                <img src="~/assets/img/blog/blog-recent-1.jpg" alt="">
+                                <img src="assets/img/blog/blog-recent-1.jpg" alt="">
                                 <h4><a href="blog-single.html">Nihil blanditiis at in nihil autem</a></h4>
                                 <time datetime="2020-01-01">Jan 1, 2020</time>
                             </div>
 
                             <div class="post-item clearfix">
-                                <img src="~/assets/img/blog/blog-recent-2.jpg" alt="">
+                                <img src="assets/img/blog/blog-recent-2.jpg" alt="">
                                 <h4><a href="blog-single.html">Quidem autem et impedit</a></h4>
                                 <time datetime="2020-01-01">Jan 1, 2020</time>
                             </div>
 
                             <div class="post-item clearfix">
-                                <img src="~/assets/img/blog/blog-recent-3.jpg" alt="">
+                                <img src="assets/img/blog/blog-recent-3.jpg" alt="">
                                 <h4><a href="blog-single.html">Id quia et et ut maxime similique occaecati ut</a></h4>
                                 <time datetime="2020-01-01">Jan 1, 2020</time>
                             </div>
 
                             <div class="post-item clearfix">
-                                <img src="~/assets/img/blog/blog-recent-4.jpg" alt="">
+                                <img src="assets/img/blog/blog-recent-4.jpg" alt="">
                                 <h4><a href="blog-single.html">Laborum corporis quo dara net para</a></h4>
                                 <time datetime="2020-01-01">Jan 1, 2020</time>
                             </div>
 
                             <div class="post-item clearfix">
-                                <img src="~/assets/img/blog/blog-recent-5.jpg" alt="">
+                                <img src="assets/img/blog/blog-recent-5.jpg" alt="">
                                 <h4><a href="blog-single.html">Et dolores corrupti quae illo quod dolor</a></h4>
                                 <time datetime="2020-01-01">Jan 1, 2020</time>
                             </div>
