--- a/WebApplication1/Views/_LayoutPage1.cshtml
+++ b/WebApplication1/Views/_LayoutPage1.cshtml
@@ -57,7 +57,7 @@
                     </li>
 
                     <li>
-                        @Html.ActionLink("Authentication", "Authentication", "Home", null, new { @class = "nav-link" })
+                        @Html.ActionLink("SignIn", "SignIn", "Login", null, new { @class = "nav-link" })
                     </li>
 
 
@@ -107,7 +107,7 @@
                 <a href="#" class="twitter"><i class="bu bi-twitter"></i></a>
                 <a href="#" class="facebook"><i class="bu bi-facebook"></i></a>
                 <a href="#" class="instagram"><i class="bu bi-instagram"></i></a>
-                <a href="#" class="linkedin"><i class="bu bi-linkedin"></i></i></a>
+                <a href="#" class="linkedin"><i class="bu bi-linkedin"></i></a>
             </div>
 
         </div>
