--- a/WebApplication1/Views/Home/Index.cshtml
+++ b/WebApplication1/Views/Home/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿
 @{
     ViewBag.Title = "Index";
-    Layout = "/Views/_LayoutPage1.cshtml";
+    Layout = "/Views/_Layout.cshtml";
 }
 <!-- ======= Authentication Section ======= -->
 
