--- a/WebApplication1/Views/Home/Portfolio.cshtml
+++ b/WebApplication1/Views/Home/Portfolio.cshtml
@@ -1,8 +1,7 @@
 ﻿
 @{
     ViewBag.Title = "Portfolio";
-    Layout = "~/Views/_LayoutPage1.cshtml";
-}
+    Layout = "~/Views/_LPages.cshtml";
 
 <main id="main">
 
