--- a/WebApplication1/Views/Home/Services.cshtml
+++ b/WebApplication1/Views/Home/Services.cshtml
@@ -1,7 +1,7 @@
 ﻿
 @{
     ViewBag.Title = "Services";
-    Layout = "~/Views/_LayoutPage1.cshtml";
+    Layout = "~/Views/_LPages.cshtml";
 }
 
 <main id="main">
