--- a/WebApplication1/Views/Login/SignIn.cshtml
+++ b/WebApplication1/Views/Login/SignIn.cshtml
@@ -3,46 +3,47 @@
 
 @{
     ViewBag.Title = "SignIn";
-    
+    Layout = "~/Views/Shared/_LSign.cshtml";
 }
+<br>
+
+
+
+
+
+
+
+
+
+</br>
+
 <!-- Hero End -->
 <!-- Contact Start -->
 <div class="container-fluid py-5">
-    <div class="container">
-        <div class="row g-5">
-            <div class="col-xl-4 col-lg-6 wow slideInUp" data-wow-delay="0.1s">
-
-            </div>
-
-            @using (Html.BeginForm("SignIn", "Login", FormMethod.Post, new { @id = "LoginForm" }))
-            {
-                @Html.AntiForgeryToken()
-                <div class="col-xl-4 col-lg-6 wow slideInUp" data-wow-delay="0.3s">
+    <div class="container d-flex justify-content-center">
+        <div class="row g-5 justify-content-center">
+            <div class="col-xl-6 col-lg-8 wow slideInUp" data-wow-delay="0.1s">
+                @using (Html.BeginForm("SignIn", "Login", FormMethod.Post, new { @id = "LoginForm" }))
+                {
+                    @Html.AntiForgeryToken()
                     <div class="row g-3">
-                        <form>
-                            <div class="col-12">
-                                @Html.TextBoxFor(x => x.Email, new { @class = "form-control border-0 bg-light px-4", @placeholder = "Почта", @style = "height: 55px;", @type = "email" })
-
-                                @Html.ValidationMessageFor(x => x.Email, "", new { @class = "text-danger" })
-                            </div>
-                            <div class="col-12">
-                                @Html.PasswordFor(x => x.Password, new { @class = "form-control border-0 bg-light px-4", @placeholder = "Пароль", @style = "height: 55px;", @type = "password" })
-                                @Html.ValidationMessageFor(x => x.Password)
-                            </div>
-                            <div class="col-12">
-                                <button type="submit" class="btn btn-primary w-100 py-3">Вход</button>
-                            </div>
-                            <div class="col-12">
-                                <a href="@Url.Action("SignUp", "Login")" class="btn btn-primary w-100 py-3">Регистрация</a>
-                            </div>
-
-                        </form>
-
+                        <div class="col-12">
+                            @Html.TextBoxFor(x => x.Email, new { @class = "form-control border-0 bg-light px-4", @placeholder = "Почта", @style = "height: 55px;", @type = "email" })
+                            @Html.ValidationMessageFor(x => x.Email, "", new { @class = "text-danger" })
+                        </div>
+                        <div class="col-12">
+                            @Html.PasswordFor(x => x.Password, new { @class = "form-control border-0 bg-light px-4", @placeholder = "Пароль", @style = "height: 55px;", @type = "password" })
+                            @Html.ValidationMessageFor(x => x.Password)
+                        </div>
+                        <div class="col-12">
+                            <button type="submit" class="btn w-100 py-3" style="background-color: #3CB371; color: white;">Вход</button>
+                        </div>
+                        <div class="col-12">
+                            <a href="@Url.Action("SignUp", "Login")" class="btn w-100 py-3" style="background-color: #3CB371; color: white;">Регистрация</a>
+                        </div>
                     </div>
-                </div>
-            }
+                }
+            </div>
         </div>
-
     </div>
-
 </div>
